# Hack_Week_Project

./: .gitignore  CMakeLists.txt  GameWindow.cpp  GameWindow.h  PayoutRule.h  README.md  Reel.cpp  Reel.h  SlotMachine.cpp  SlotMachine.h  Symbol.h  flowchart.md  main.cpp  resources.qrc
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
assets/: README.md  chatgpt-brainstorm-symbols.md
